Ana sayfa index.html ve dosya yolları güncellendi

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
     @font-face {
       font-family: 'Gilroy';
-      src: url('Gilroy-SemiBold.ttf') format('truetype');
+      src: url('./288ppi/Gilroy-SemiBold.ttf') format('truetype');
       font-weight: 600;
       font-style: normal;
     }
 
     @font-face {
       font-family: 'Gilroy';
-      src: url('Gilroy-RegularItalic.ttf') format('truetype');
+      src: url('./288ppi/Gilroy-RegularItalic.ttf') format('truetype');
       font-weight: 400;
       font-style: italic;
     }
@@ -29,7 +29,7 @@
     }
 
     .background-wrapper {
-      background: url('arka_plan_tek_renk.webp') no-repeat center center;
+      background: url('./288ppi/arka_plan_tek_renk.webp') no-repeat center center;
       background-size: cover;
       max-width: 1080px;
       margin: 0 auto;
@@ -42,7 +42,7 @@
       top: 0;
       bottom: 0;
       width: 200px;
-      background: url('pattern_arkaplan.webp') repeat-y center center;
+      background: url('./288ppi/pattern_arkaplan.webp') repeat-y center center;
       background-size: 500%;
       z-index: 1;
       display: none;
@@ -168,7 +168,7 @@
 
   <div class="background-wrapper">
     <div class="container">
-      <img src="logo.webp" alt="Regnum Logo" class="logo" />
+      <img src="./288ppi/logo.webp" alt="Regnum Logo" class="logo" />
 
       <div class="filter-buttons">
         <button class="active" onclick="filterItems('all', this)">Tümü</button>
@@ -178,21 +178,21 @@
       </div>
 
       <div class="gallery" id="gallery">
-        <div class="item kulp"><img src="Kulp_Elisse_kulp.webp" alt="Elisse Kulp" /></div>
-        <div class="item dugme"><img src="Dugme_Crea_dugme.webp" alt="Crea Düğme" /></div>
-        <a href="../crea_kare_dugme_qr/index.html" class="item dugme">
-          <img src="Dugme_Crea_kare.webp" alt="Crea Kare" />
+        <div class="item kulp"><img src="./288ppi/Kulp_Elisse_kulp.webp" alt="Elisse Kulp" /></div>
+        <div class="item dugme"><img src="./288ppi/Dugme_Crea_dugme.webp" alt="Crea Düğme" /></div>
+        <a href="./crea_kare_dugme_qr/index.html" class="item dugme">
+          <img src="./288ppi/Dugme_Crea_kare.webp" alt="Crea Kare" />
         </a>
-        <div class="item dugme"><img src="Dugme_Crea_ucgen.webp" alt="Crea Üçgen" /></div>
-        <div class="item dugme"><img src="Dugme_luna.webp" alt="Luna Düğme" /></div>
-        <div class="item kulp"><img src="Kulp_Payanda_1.webp" alt="Payanda Kulp" /></div>
-        <div class="item ayak"><img src="Ayak_Elora.webp" alt="Elora Ayak" /></div>
-        <div class="item ayak"><img src="Ayak_Payanda.webp" alt="Payanda Ayak" /></div>
-        <div class="item ayak"><img src="Ayak_vito.webp" alt="Vito Ayak" /></div>
+        <div class="item dugme"><img src="./288ppi/Dugme_Crea_ucgen.webp" alt="Crea Üçgen" /></div>
+        <div class="item dugme"><img src="./288ppi/Dugme_luna.webp" alt="Luna Düğme" /></div>
+        <div class="item kulp"><img src="./288ppi/Kulp_Payanda_1.webp" alt="Payanda Kulp" /></div>
+        <div class="item ayak"><img src="./288ppi/Ayak_Elora.webp" alt="Elora Ayak" /></div>
+        <div class="item ayak"><img src="./288ppi/Ayak_Payanda.webp" alt="Payanda Ayak" /></div>
+        <div class="item ayak"><img src="./288ppi/Ayak_vito.webp" alt="Vito Ayak" /></div>
       </div>
 
       <div class="footer-link" onclick="window.open('https://www.regnummetal.com', '_blank')">
-        <img src="Web_yonlendirme.webp" alt="Regnum Web Sitesi" />
+        <img src="./288ppi/Web_yonlendirme.webp" alt="Regnum Web Sitesi" />
       </div>
     </div>
   </div>
