Crea Kare Düğme sayfası görsel yolları düzeltildi

--- a/crea_kare_dugme_qr/index.html
+++ b/crea_kare_dugme_qr/index.html
@@ -13,7 +13,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: url('C:/Users/tolga3080/OneDrive - sakschools.sakschools/Masaüstü/qr_video/Ana_Sayfa/crea_kare_dugme_qr/arka_plan_tek_renk.webp') no-repeat center center;
+      background: url('arka_plan_tek_renk.webp') no-repeat center center;
       background-size: cover;
       overflow: hidden;
     }
@@ -168,36 +168,36 @@
 <body>
   <div class="wrapper">
     <div class="logo-row">
-      <img src="C:/Users/tolga3080/OneDrive - sakschools.sakschools/Masaüstü/qr_video/Ana_Sayfa/crea_kare_dugme_qr/geri_icon.webp" alt="Geri Dön" class="back-button" onclick="history.back()">
-      <img src="C:/Users/tolga3080/OneDrive - sakschools.sakschools/Masaüstü/qr_video/Ana_Sayfa/crea_kare_dugme_qr/Varlık 13.webp" class="logo" alt="Regnum Logo" />
+      <img src="geri_icon.webp" alt="Geri Dön" class="back-button" onclick="history.back()">
+      <img src="Varlık 13.webp" class="logo" alt="Regnum Logo" />
     </div>
 
     <div class="product-name">RGN.K06 / <strong>Crea Kare Düğme</strong></div>
 
     <div class="video-area">
       <video id="productVideo" autoplay muted loop preload="auto" playsinline>
-        <source src="C:/Users/tolga3080/OneDrive - sakschools.sakschools/Masaüstü/qr_video/Ana_Sayfa/crea_kare_dugme_qr/crea_dugme_gold.mp4" type="video/mp4">
+        <source src="crea_dugme_gold.mp4" type="video/mp4">
         Tarayıcınız video etiketini desteklemiyor.
       </video>
     </div>
 
     <div class="color-buttons">
       <div onclick="changeVideo('crea_dugme_gold.mp4', this)" class="active">
-        <img src="C:/Users/tolga3080/OneDrive - sakschools.sakschools/Masaüstü/qr_video/Ana_Sayfa/crea_kare_dugme_qr/gold_button.webp" alt="Gold"><span>Gold</span>
+        <img src="gold_button.webp" alt="Gold"><span>Gold</span>
       </div>
       <div onclick="changeVideo('crea_dugme_mat_siyah.mp4', this)">
-        <img src="C:/Users/tolga3080/OneDrive - sakschools.sakschools/Masaüstü/qr_video/Ana_Sayfa/crea_kare_dugme_qr/Matsiyah_button.webp" alt="Mat Siyah"><span>Mat Siyah</span>
+        <img src="Matsiyah_button.webp" alt="Mat Siyah"><span>Mat Siyah</span>
       </div>
       <div onclick="changeVideo('crea_dugme_bronz.mp4', this)">
-        <img src="C:/Users/tolga3080/OneDrive - sakschools.sakschools/Masaüstü/qr_video/Ana_Sayfa/crea_kare_dugme_qr/bronz_button.webp" alt="Bronz"><span>Bronz</span>
+        <img src="bronz_button.webp" alt="Bronz"><span>Bronz</span>
       </div>
       <div onclick="changeVideo('crea_dugme_krom.mp4', this)">
-        <img src="C:/Users/tolga3080/OneDrive - sakschools.sakschools/Masaüstü/qr_video/Ana_Sayfa/crea_kare_dugme_qr/krom_button.webp" alt="Krom"><span>Krom</span>
+        <img src="krom_button.webp" alt="Krom"><span>Krom</span>
       </div>
     </div>
 
-    <div class="footer-link" onclick="window.open('https://www.regnummetal.com', '_blank')">
-      <img src="C:/Users/tolga3080/OneDrive - sakschools.sakschools/Masaüstü/qr_video/Ana_Sayfa/crea_kare_dugme_qr/websitesi_yonlendirici_metin.webp" alt="Regnum Metal">
+    <div class="footer-link" onclick="window.open('https://www.regnummetalsunum.com', '_blank')">
+      <img src="websitesi_yonlendirici_metin.webp" alt="Regnum Metal">
     </div>
   </div>
 
