Yeni Modeller başlığı geri eklendi

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
   <div class="background-wrapper">
     <div class="container">
       <img src="./288ppi/logo.webp" alt="Regnum Logo" class="logo" />
+      <img src="./288ppi/Varlık 33.webp" alt="Yeni Modeller" style="max-width: 240px; display: block; margin: 0 auto 20px;" />
 
       <div class="filter-buttons">
         <button class="active" onclick="filterItems('all', this)">Tümü</button>
