--- a/index.html
+++ b/index.html
@@ -8,74 +8,11 @@
     * { box-sizing: border-box; }
 
     body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: url('./288ppi/arka_plan_tek_renk.webp') no-repeat center center;
-      background-size: cover;
-    }
-
-    .login-wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      padding: 20px;
-      flex-direction: column;
-      text-align: center;
-    }
-
-    .login-box {
-      background: white;
-      padding: 40px;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
-      max-width: 400px;
-      width: 100%;
-    }
-
-    .login-logo {
-      max-height: 80px;
-      margin-bottom: 30px;
-    }
-
-    input[type="password"] {
-      padding: 10px;
-      width: 100%;
-      margin-top: 10px;
-      font-size: 16px;
-    }
-
-    button {
-      margin-top: 20px;
-      padding: 10px 30px;
-      font-size: 16px;
-      background-color: black;
-      color: white;
-      border: none;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-
-    .error {
-      color: red;
-      margin-top: 15px;
-      font-size: 14px;
-    }
-
-    #main-content {
-      display: none;
-    }
-
-    .background-wrapper {
-      max-width: 1080px;
-      margin: 0 auto;
-      position: relative;
-      z-index: 2;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+     font-family: 'Gilroy', sans-serif;
+  margin: 0;
+  padding: 0;
+  background: url('./288ppi/arka_plan_tek_renk.webp') no-repeat center center;
+  background-size: cover;
     }
 
     .pattern-left, .pattern-right {
@@ -84,24 +21,35 @@
       bottom: 0;
       width: 200px;
       background: url('./288ppi/pattern_arkaplan.webp') repeat-y center center;
-      background-size: 500%;
-      z-index: 1;
+      background-size: 400%;
+      z-index: 0;
       display: none;
     }
 
     .pattern-left { left: 0; }
     .pattern-right { right: 0; }
 
-    @media (min-width: 1081px) {
+    @media (min-width: 1101px) {
       .pattern-left, .pattern-right {
         display: block;
       }
     }
 
-    .container {
-      max-width: 1080px;
+    .background-wrapper {
+      background: url('./288ppi/arka_plan_tek_renk.webp') no-repeat center top;
+      background-size: contain;
+      max-width: 1100px;
       margin: 0 auto;
-      padding: 20px 10px 100px;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      z-index: 1;
+      position: relative;
+    }
+
+    .container {
+      padding: 20px 10px 40px;
       text-align: center;
     }
 
@@ -112,11 +60,10 @@
     }
 
     .filter-buttons {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
       margin: 20px 0;
-      flex-wrap: wrap;
     }
 
     .filter-buttons button {
@@ -174,12 +121,9 @@
     }
 
     .footer-link {
-      position: fixed;
-      bottom: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 999;
       text-align: center;
+      margin-top: 40px;
+      margin-bottom: 20px;
     }
 
     .footer-link img {
@@ -190,80 +134,40 @@
   </style>
 </head>
 <body>
+  <div class="pattern-left"></div>
+  <div class="pattern-right"></div>
 
-  <!-- Şifre Ekranı -->
-  <div class="login-wrapper" id="login-form">
-    <img src="./288ppi/logo.webp" alt="Regnum Logo" class="login-logo" />
-    <div class="login-box">
-      <h2>Gizli Koleksiyon Girişi</h2>
-      <p>Regnum’un özel koleksiyonuna giriş yapmak üzeresiniz.</p>
-      <input type="password" id="password-input" placeholder="Şifre girin" />
-      <button onclick="checkPassword()">Giriş</button>
-      <div class="error" id="error-msg"></div>
-    </div>
-  </div>
+  <div class="background-wrapper">
+    <div class="container">
+      <img src="./288ppi/logo.webp" alt="Regnum Logo" class="logo" />
+      <img src="./288ppi/Varlık 33.webp" alt="Yeni Modeller" style="max-width: 240px; display: block; margin: 0 auto 20px;" />
 
-  <!-- Ana Sayfa İçeriği -->
-  <div id="main-content">
-    <div class="pattern-left"></div>
-    <div class="pattern-right"></div>
-
-    <div class="background-wrapper">
-      <div class="container">
-        <img src="./288ppi/logo.webp" alt="Regnum Logo" class="logo" />
-        <img src="./288ppi/Varlık 33.webp" alt="Yeni Modeller" style="max-width: 240px; display: block; margin: 0 auto 20px;" />
-
-        <div class="filter-buttons">
-          <button class="active" onclick="filterItems('all', this)">Tümü</button>
-          <button onclick="filterItems('kulp', this)">Kulp</button>
-          <button onclick="filterItems('dugme', this)">Düğme</button>
-          <button onclick="filterItems('ayak', this)">Ayak</button>
-        </div>
-
-        <div class="gallery" id="gallery">
-          <div class="item kulp"><img src="./288ppi/Kulp_Elisse_kulp.webp" alt="Elisse Kulp" /></div>
-          <div class="item dugme"><img src="./288ppi/Dugme_Crea_dugme.webp" alt="Crea Düğme" /></div>
-          <a href="./crea_kare_dugme_qr/index.html" class="item dugme"><img src="./288ppi/Dugme_Crea_kare.webp" alt="Crea Kare" /></a>
-          <div class="item dugme"><img src="./288ppi/Dugme_Crea_ucgen.webp" alt="Crea Üçgen" /></div>
-          <div class="item dugme"><img src="./288ppi/Dugme_luna.webp" alt="Luna Düğme" /></div>
-          <div class="item kulp"><img src="./288ppi/Kulp_Payanda_1.webp" alt="Payanda Kulp" /></div>
-          <div class="item ayak"><img src="./288ppi/Ayak_Elora.webp" alt="Elora Ayak" /></div>
-          <div class="item ayak"><img src="./288ppi/Ayak_Payanda.webp" alt="Payanda Ayak" /></div>
-          <div class="item ayak"><img src="./288ppi/Ayak_vito.webp" alt="Vito Ayak" /></div>
-        </div>
+      <div class="filter-buttons">
+        <button class="active" onclick="filterItems('all', this)">Tümü</button>
+        <button onclick="filterItems('kulp', this)">Kulp</button>
+        <button onclick="filterItems('dugme', this)">Düğme</button>
+        <button onclick="filterItems('ayak', this)">Ayak</button>
       </div>
-    </div>
 
-    <div class="footer-link" onclick="window.open('https://www.regnummetal.com', '_blank')">
-      <img src="./288ppi/Web_yonlendirme.webp" alt="Regnum Web Sitesi" />
+      <div class="gallery" id="gallery">
+        <div class="item kulp"><img src="./288ppi/Kulp_Elisse_kulp.webp" alt="Elisse Kulp" /></div>
+        <div class="item dugme"><img src="./288ppi/Dugme_Crea_dugme.webp" alt="Crea Düğme" /></div>
+        <a href="./crea_kare_dugme_qr/index.html" class="item dugme"><img src="./288ppi/Dugme_Crea_kare.webp" alt="Crea Kare" /></a>
+        <div class="item dugme"><img src="./288ppi/Dugme_Crea_ucgen.webp" alt="Crea Üçgen" /></div>
+        <div class="item dugme"><img src="./288ppi/Dugme_luna.webp" alt="Luna Düğme" /></div>
+        <div class="item kulp"><img src="./288ppi/Kulp_Payanda_1.webp" alt="Payanda Kulp" /></div>
+        <div class="item ayak"><img src="./288ppi/Ayak_Elora.webp" alt="Elora Ayak" /></div>
+        <div class="item ayak"><img src="./288ppi/Ayak_Payanda.webp" alt="Payanda Ayak" /></div>
+        <div class="item ayak"><img src="./288ppi/Ayak_vito.webp" alt="Vito Ayak" /></div>
+      </div>
+
+      <div class="footer-link" onclick="window.open('https://www.regnummetal.com', '_blank')">
+        <img src="./288ppi/Web_yonlendirme.webp" alt="Regnum Web Sitesi" />
+      </div>
     </div>
   </div>
 
   <script>
-    const correctPassword = "regnum2025";
-    const loginForm = document.getElementById("login-form");
-    const mainContent = document.getElementById("main-content");
-
-    window.onload = () => {
-      if (sessionStorage.getItem("regnum_access") === "granted") {
-        loginForm.style.display = "none";
-        mainContent.style.display = "block";
-      }
-    };
-
-    function checkPassword() {
-      const input = document.getElementById("password-input").value;
-      const error = document.getElementById("error-msg");
-
-      if (input === correctPassword) {
-        sessionStorage.setItem("regnum_access", "granted");
-        loginForm.style.display = "none";
-        mainContent.style.display = "block";
-      } else {
-        error.textContent = "Hatalı şifre, lütfen tekrar deneyin.";
-      }
-    }
-
     function filterItems(category, element) {
       const buttons = document.querySelectorAll('.filter-buttons button');
       buttons.forEach(btn => btn.classList.remove('active'));
@@ -281,6 +185,5 @@
       sortedVisible.forEach(item => gallery.appendChild(item));
     }
   </script>
-
 </body>
 </html>
