--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Regnum Sunum Erişimi</title>
+  <link rel="icon" type="image/x-icon" href="./288ppi/favicon.svg" />
+
   <style>
     * { box-sizing: border-box; }
 
@@ -49,7 +51,7 @@
     }
 
     .container {
-      padding: 20px 10px 40px;
+      padding: 20px 10px 100px;
       text-align: center;
     }
 
@@ -58,12 +60,17 @@
       max-height: 80px;
       margin: 20px auto;
     }
+@media (min-width: 1920px) {
+  .logo {
+    max-height: 120px;
+  }
+}
 
     .filter-buttons {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 10px;
-      margin: 20px 0;
+      margin: 40px 0 40px;
     }
 
     .filter-buttons button {
@@ -120,14 +127,23 @@
       display: block;
     }
 
-    .footer-link {
-      text-align: center;
-      margin-top: 40px;
-      margin-bottom: 20px;
-    }
+   .footer-link {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background: url('./288ppi/arka_plan_tek_renk.webp') no-repeat center center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
 
     .footer-link img {
-      height: 25px;
+      height: 20px;
       width: auto;
       cursor: pointer;
     }
